--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
 
 body {
   font-family: "Segoe UI", sans-serif;
-  background-color: #2c2f33;
+  background-color: #3f4347;
   color: #ffffff;
   line-height: 1.6;
 }
 
 /* Header */
 header {
-  background-color: #23272a;
+  background-color: #0e0d0d;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -128,47 +128,83 @@ nav a:hover {
   margin-top: 20px;
 }
 .skill {
-  background-color: #40444b;
+  background-color: #2e2f30;
   padding: 15px;
   border-radius: 8px;
   text-align: center;
   transition: backgrou
 }
 .qualité{
-  background-color: #40444b;
+  background-color: #2e2f30;
   padding: 15px;
   border-radius: 8px;
   text-align: center;
   transition: backgrou
 }
-
-
-
-
-.topnav #myLinks {
-  display: none;
-  background: image(☰);
-}
-
-.topnav a {
-  float: left;
-  color: white;
-  padding: 14px 16px;
+.ancre {
+  display: inline-block;
+  
+  text-align: center;
   text-decoration: none;
-  font-size: 17px;
+  color: #ffffff;
+  background-color: #0e0d0d;
+  padding: 5px 10px;
+  border: 2px solid #000000; /* si tu veux un cadre noir */
+  border-radius: 5px; /* optionnel : angles arrondis */
+}
+a{
+  text-decoration: none;
+  color: #ffffff;
+  
+}
+a:hover{
+  color: #7289da;
+}
+table{
+  text-align: center;
+  border: 10px;
+  border-radius: 100%;
+  border-color: #ff0000;
+  border-width: 10%;
+  
+}
+.tableau {
+  margin: 20px auto; /* centre horizontalement */
+  border-collapse: collapse;
+  width: 80%; /* optionnel */
+  text-align: justify;
+  border: 10px solid black;
+  width: 800px;
+  font-size: 18px;
+}
+.tableau, 
+.tableau th, 
+.tableau td {
+  border: 6px solid black;        /* affiche les lignes du tableau */
+  padding: 15px;                   /* espace intérieur */
+}
+h2{
   text-align: center;
 }
-
-.topnav a.icon {
-  float: right;
-  animation: normal;
+form{
+  color: #ffffff;
+  margin: 1%;
+  padding: 10%;
+  position: absolute;
+  
+}
+select {
+  width: 200px;     /* augmente la largeur */
+  height: 35px;     /* augmente la hauteur du bouton visible */
+  font-size: 16px;  /* texte plus grand */
+  padding: 5px;     /* espace intérieur */
+  border-radius: 10px;
+  background-color: #0e0d0d;
+  color: #ffffff;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-  background-image: image(☰);
-}
+
+
 
 
 
