--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ nav a:hover {
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background: url('/image/image\ aculle.jpg') center/cover no-repeat;
+  background: url('image/image\ aculle.jpg') center/cover no-repeat;
   filter: brightness(40%);
   z-index: 0;
 }
